# lidfly-plugins

./: .gitignore  LICENSE  README.md
.agents/plugins/: marketplace.json
.github/workflows/: installer-ci.yml  installer-release.yml
.github/workflows.disabled/: README.md
docs/: INSTALLER-ARCHITECTURE.md  INSTALLER-DEVELOPMENT.md  INSTALLER-RELEASE.md  RUNBOOK-CODEX-PLUGIN-RELEASE.md
installer/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
installer/src/: main.ts  styles.css  types.ts  update-policy.ts  updater-errors.ts
installer/src-tauri/: Cargo.toml  tauri.conf.json
installer/src-tauri/capabilities/: default.json
installer/src-tauri/examples/: verify-updater-signature.rs
installer/src-tauri/icons/: icon.icns
installer/src-tauri/src/: bundle.rs  codex_uri.rs  lib.rs  main.rs  models.rs  operations.rs  state.rs
installer/src-tauri/tests/: installer_flow.rs
installer/tests/: bundle.test.mjs  pe-machine.test.mjs  update-policy.test.ts  updater-errors.test.ts
plugins/lidfly/: .mcp.json
releases/: 1.0.0.json  1.0.1.json  1.1.0.json  latest.json
scripts/: assemble-local-release.mjs  build-plugin-bundle.mjs  build-release-macos.sh  build-release-windows-cross.sh  build-release-windows.ps1  check-versions.mjs  manage-release-metadata.mjs  merge-signing-evidence.mjs  prepare-release-handoff.mjs  run-local-ci.mjs  verify-pe-authenticode.mjs  verify-pe-machine.mjs  verify-plugin-bundle.mjs  verify-project.mjs  verify-release-artifacts.mjs  write-release-tauri-config.mjs
scripts/lib/: pe-machine.mjs  plugin-bundle.mjs  (+1 more)
(+48 files in other folders)
