[package]
name = "lidfly-codex-plugin-installer"
version = "1.0.1"
description = "LidFly marketplace installer for Codex"
authors = ["LidFly"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "lidfly_codex_plugin_installer_lib"
crate-type = ["rlib", "cdylib", "staticlib"]

[[bin]]
name = "lidfly-codex-plugin-installer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
fs2 = "0.4"
minisign-verify = "0.2"
percent-encoding = "2.3"
semver = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
thiserror = "2"
url = "2"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
strip = true
